fixed the feature meta problem in view and update

--- a/mcarbonPortal/src/app/create-account/create-account.component.html
+++ b/mcarbonPortal/src/app/create-account/create-account.component.html
@@ -204,7 +204,7 @@
               </div> -->
 
               <div
-                class="col-md-5"
+                class="col-md-6 offset-md-1"
                 *ngIf="selectedFeatures.includes(feature.featureId)"
               >
                 <div *ngFor="let meta of feature.metaList">
