--- a/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.scss
+++ b/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.scss
@@ -70,6 +70,13 @@
     background-color: #17d1be !important;
     border-color: #17d1be !important;
   }
+
+  ::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+    background-color: #17d1be !important;
+  }
+  ::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+    background-color: #bbfff8 !important;
+  }
   
   .container {
     padding-top: 10px;
