--- a/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.scss
+++ b/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.scss
@@ -72,6 +72,13 @@ mat-tab-group {
   border-color: #17d1be !important;
 }
 
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+  background-color: #17d1be !important;
+}
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+  background-color: #bbfff8 !important;
+}
+
 .container {
   padding-top: 10px;
 }
@@ -126,7 +133,7 @@ img {
   width: 100%;
 }
 
-.label{
+.label {
   font-weight: bolder;
   font-size: 1rem;
 }
