--- a/mcarbonPortal/src/app/view-user-dialog/view-user-dialog.component.html
+++ b/mcarbonPortal/src/app/view-user-dialog/view-user-dialog.component.html
@@ -64,16 +64,6 @@
         <div class="row">
           <div class="col-md-5 offset-md-1">
             <mat-form-field>
-              <input
-                matInput
-                type="text"
-                placeholder="Login ID"
-                formControlName="login_id"
-              />
-            </mat-form-field>
-          </div>
-          <div class="col-md-5">
-            <mat-form-field>
               <mat-label>Account Expiry Date</mat-label>
               <input
                 matInput
@@ -86,6 +76,16 @@
                 [for]="picker"
               ></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div class="col-md-5">
+            <mat-form-field>
+              <input
+                matInput
+                type="text"
+                placeholder="Login ID"
+                formControlName="login_id"
+              />
             </mat-form-field>
           </div>
         </div>
@@ -129,7 +129,6 @@
               <mat-checkbox
                 [value]="access.accessId"
                 class="col-md-5 offset-md-1"
-                (change)="addAccessId(access, $event.checked)"
                 [checked]="isCheckAccess(access)"
                 disabled
               >
@@ -196,38 +195,53 @@
                 <mat-checkbox
                   [value]="feature.featureId"
                   [checked]="isCheckFeature(feature)"
-                  (change)="
-                    showMetaList(feature, $event.checked);
-                    updateSelectedFeaturesMeta(
-                      feature.featureId,
-                      feature.metaList
-                    )
-                  "
                   disabled
                 >
                   {{ feature.name }}
                 </mat-checkbox>
               </div>
-              <div class="col-md-6" *ngIf="isCheckFeature(feature)">
-                <div class="row">
-                  <mat-form-field
-                    *ngFor="let meta of feature.selectedMetaList"
-                    class="col-md-6"
-                  >
-                    <input
-                      matInput
-                      value="{{ meta.value }}"
-                      placeholder="{{ meta.key }}"
-                      #metaValue
-                      (change)="
-                        setMetaValue(
-                          feature.featureId,
-                          meta.key,
-                          metaValue.value
-                        )
-                      "
-                    />
-                  </mat-form-field>
+              <div
+                class="col-md-6 offset-md-1"
+                *ngIf="
+                  (selectedFeatures.includes(feature.featureId) ||
+                    isCheckFeature(feature)) &&
+                  selectedFeaturesMeta[feature.featureId]
+                "
+              >
+                <div *ngFor="let meta of feature.metaList">
+                  <ng-container [ngSwitch]="meta.type">
+                    <mat-slide-toggle
+                      checked="{{
+                        selectedFeaturesMeta[feature.featureId][meta.key]
+                      }}"
+                      *ngSwitchCase="'bool'"
+                      disabled
+                    >
+                      {{ meta.name }}
+                    </mat-slide-toggle>
+
+                    <div *ngSwitchCase="'file'">
+                      <label for="{{ meta.key }}">{{ meta.name }}</label>
+                      <input
+                        type="file"
+                        id="{{ meta.key }}"
+                        name="{{ meta.key }}"
+                        disabled
+                      />
+                    </div>
+
+                    <mat-form-field *ngSwitchCase="'text'">
+                      <input
+                        value="{{
+                          selectedFeaturesMeta[feature.featureId][meta.key]
+                        }}"
+                        matInput
+                        #metaValue
+                        type="text"
+                        placeholder="{{ meta.name }}"
+                        disabled
+                    /></mat-form-field>
+                  </ng-container>
                 </div>
               </div>
             </div>
