--- a/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.html
+++ b/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.html
@@ -157,7 +157,7 @@
         </div>
 
         <div class="row">
-          <section class="example-section">
+          <section class="example-section" *ngIf="accessData">
             <ng-container *ngFor="let access of accessData">
               <mat-checkbox
                 [value]="access.accessId"
@@ -181,7 +181,7 @@
           </div>
         </div>
         <div class="row">
-          <section class="example-section">
+          <section class="example-section" *ngIf="featuresData">
             <div *ngFor="let feature of featuresData" class="row">
               <div class="col-md-4 offset-md-1">
                 <mat-checkbox
