--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/session/session.component.css
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/session/session.component.css
@@ -121,7 +121,7 @@
 
 .ticker {
 	width: 100%;
-	height: 50px;
+	height: 40px;
 	background-color: #333;
 	color: #FFF;
 	overflow: hidden;
@@ -149,5 +149,9 @@
 	animation-direction: alternate;
 	animation-fill-mode: both;
   }
-
+  .centered {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
   
