video UI changes

--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -17,7 +17,7 @@
 	[toolbarBroadcastingButton]="broadcastingEnabled"
 	[toolbarScreenshareButton]="screenShareEnabled"
 	[toolbarRecordingButton]="recordingEnabled()"
-	[toolbarFullscreenButton]="false"
+	[toolbarFullscreenButton]="true"
 	[toolbarBackgroundEffectsButton]="false"
 	[toolbarCaptionsButton]="false"
 	[toolbarSettingsButton]="true"
@@ -33,7 +33,7 @@
 	[streamDisplayAudioDetection]="true"
 	[streamSettingsButton]="true"
 	[minimal]="false"
-	[participantName]="participantName()"
+	[participantName]="participantNameValue"
 	[prejoin]="false"
 	[videoMuted]="true"
 	[audioMuted]="true"
