--- a/mcarbonPortal/src/app/account-management/account-management.component.scss
+++ b/mcarbonPortal/src/app/account-management/account-management.component.scss
@@ -18,6 +18,10 @@
   .main-content {
     margin-top: 60px !important;
   }
+
+  .btn-dark{
+    background-color: black;
+  }
   
   ::ng-deep .mat-snack-bar-container {
     background: linear-gradient(60deg, #e8f1ee, #ffffff) !important;
