--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.scss
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.scss
@@ -32,6 +32,9 @@
   font-size: 1rem;
 }
 
+.btn-photo {
+  background-color: #009688;
+}
 .btn-1 {
   background: linear-gradient(60deg, #009688, #17d1be);
   color: white;
