photo showing in user profile

--- a/mcarbonPortal/src/app/user-profile/user-profile.component.html
+++ b/mcarbonPortal/src/app/user-profile/user-profile.component.html
@@ -53,7 +53,7 @@
         <div class="card card-profile card-profile-1">
           <div class="card-avatar">
             <a href="javascript:void(0)">
-              <img class="img" src="./assets/img/faces/marc.jpg" />
+              <img class="img" src={{user.logo.byte}} />
             </a>
           </div>
           <div class="card-body">
