video UI changes

--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/stream/stream.component.css
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/stream/stream.component.css
@@ -110,7 +110,9 @@
 	background-color: transparent;
 	border-radius: var(--ov-video-radius);
   }
-
+  .OV_stream.ticker-exists {
+	height: 93%;
+  }
   input {
 	caret-color: #ffffff !important;
   }
