--- a/mcarbonPortal/src/app/user-profile/user-profile.component.html
+++ b/mcarbonPortal/src/app/user-profile/user-profile.component.html
@@ -53,7 +53,16 @@
         <div class="card card-profile card-profile-1">
           <div class="card-avatar">
             <a href="javascript:void(0)">
-              <img class="img" src={{user.logo.byte}} />
+              <img
+                *ngIf="user.logo"
+                class="img"
+                src="{{ user.logo.byte }}"
+              />
+              <img
+                *ngIf="!user.logo"
+                class="img"
+                src="../../assets/img/faces/marc.jpg"
+              />
             </a>
           </div>
           <div class="card-body">
