fixed the size of logo in user profile

--- a/mcarbonPortal/src/app/user-profile/user-profile.component.scss
+++ b/mcarbonPortal/src/app/user-profile/user-profile.component.scss
@@ -43,3 +43,10 @@ button {
 .list {
   font-size: 1rem;
 }
+
+.card-profile .card-avatar .img{
+  min-width: 130px !important;
+  max-width: 130px !important;
+  min-height: 130px !important;
+  max-height: 130px !important;
+}
